WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275391
REGRESSION (
275831@main
): Music video can't be played after tapping music video in Music app
https://bugs.webkit.org/show_bug.cgi?id=275391
Summary
REGRESSION (275831@main): Music video can't be played after tapping music vid...
Jean-Yves Avenard [:jya]
Reported
2024-06-12 02:25:37 PDT
STR: 1. Open
https://www.apple.com/iphone-15-pro/
in Safari and tap “Watch the film” 2. Exit Safari; the video should continue playing in PiP 3. Open app that can play a video 4. start playing video. What happens: the Safari PiP window continue playing and the new video playback doesn't start.
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2024-06-12 02:26:01 PDT
rdar://128055030
Jean-Yves Avenard [:jya]
Comment 2
2024-06-12 03:34:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29743
EWS
Comment 3
2024-06-12 20:15:20 PDT
Committed
279977@main
(d03d3a516272): <
https://commits.webkit.org/279977@main
> Reviewed commits have been landed. Closing PR #29743 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug